Init: correctly align logout button text

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2393,6 +2393,10 @@ html {
   padding-bottom: 1rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
